# umbral

./: .gitignore  README.md  package-lock.json  package.json
anchor/: Anchor.toml  package.json  tsconfig.json
anchor/client/: pdas.ts
anchor/migrations/: deploy.js
anchor/programs/egoshot-escrow/: Cargo.toml
anchor/programs/egoshot-escrow/src/: error.rs  events.rs  lib.rs  state.rs
anchor/tests/: egoshot-escrow.ts
backend/: .env.example  package.json  tsconfig.json
backend/src/: config.ts  index.ts  types.ts
backend/src/bot/: DemoBot.ts
backend/src/crypto/: commitReveal.ts
backend/src/game/: GameManager.ts  penaltyRules.ts
backend/src/http/: routes.ts
backend/src/queue/: MatchmakingQueue.ts
backend/src/socket/: index.ts
backend/tests/: commitReveal.test.ts  gameManager.test.ts  matchmakingQueue.test.ts  penaltyRules.test.ts
frontend/: next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/docs/: firestore.rules
frontend/public/audio/: README.txt
frontend/public/design/: character-select-frame-prototype.html  solo-leveling-system-login.html
frontend/public/models/: anim_block.fbx  anim_dive.fbx  anim_juggle.fbx  anim_kick.fbx  miku_teto.glb
frontend/public/story/: README.md
frontend/src/app/: cinematic-layout.css  globals.css  gothic-varek.css  layout.tsx  page.tsx
frontend/src/components/: ClientApp.tsx  DirectionPicker.tsx  GameApp.tsx  Header.tsx  LobbyPanel.tsx  MatchView.tsx  PenaltyPitch.tsx  WalletProvider.tsx
scripts/: dev.mjs  extract_video_frames.py  predev.mjs  stop-dev.mjs
(+111 files in other folders)
