[package]
name = "egoshot-escrow"
version = "0.1.0"
description = "EgoShot PvP penalty bet escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "egoshot_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
